--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(material_radio)
 export(material_row)
 export(material_select)
 export(material_slider)
+export(material_switch)
 export(material_text)
 export(update_material_checkbox)
 export(update_material_radio)
 export(update_material_select)
+export(update_material_switch)
 export(update_material_text)
