--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,22 @@ export(material_button)
 export(material_card)
 export(material_checkbox)
 export(material_column)
+export(material_container)
 export(material_date_picker)
+export(material_divider)
 export(material_page)
 export(material_radio)
 export(material_row)
+export(material_section)
 export(material_select)
 export(material_slider)
 export(material_switch)
+export(material_tab_content)
+export(material_tabs)
 export(material_text)
 export(update_material_checkbox)
 export(update_material_radio)
 export(update_material_select)
 export(update_material_switch)
+export(update_material_tabs)
 export(update_material_text)
