--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(material_column)
 export(material_container)
 export(material_date_picker)
 export(material_divider)
+export(material_file)
 export(material_page)
 export(material_radio)
 export(material_row)
