text, number, password, email, date and time OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,13 @@ export(material_card)
 export(material_checkbox)
 export(material_column)
 export(material_container)
-export(material_date_picker)
+export(material_date)
 export(material_divider)
+export(material_email)
 export(material_file)
+export(material_number)
 export(material_page)
+export(material_password)
 export(material_radio)
 export(material_row)
 export(material_section)
@@ -18,7 +21,12 @@ export(material_switch)
 export(material_tab_content)
 export(material_tabs)
 export(material_text)
+export(material_time)
 export(update_material_checkbox)
+export(update_material_date)
+export(update_material_email)
+export(update_material_number)
+export(update_material_password)
 export(update_material_radio)
 export(update_material_select)
 export(update_material_switch)
