--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(material_date)
 export(material_divider)
 export(material_email)
 export(material_file)
+export(material_floating)
 export(material_modal)
 export(material_number)
 export(material_page)
