--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(material_container)
 export(material_date)
 export(material_divider)
 export(material_email)
+export(material_fab)
 export(material_file)
-export(material_floating)
 export(material_modal)
 export(material_number)
 export(material_page)
@@ -31,6 +31,7 @@ export(update_material_number)
 export(update_material_password)
 export(update_material_radio)
 export(update_material_select)
+export(update_material_slider)
 export(update_material_switch)
 export(update_material_tabs)
 export(update_material_text)
