Add perfect scrollbar and Tooltip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(material_tab_content)
 export(material_tabs)
 export(material_text)
 export(material_time)
+export(material_tooltip)
 export(update_material_checkbox)
 export(update_material_date)
 export(update_material_email)
