--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(material_column)
 export(material_container)
 export(material_date)
 export(material_divider)
+export(material_dropdown)
 export(material_email)
 export(material_fab)
 export(material_file)
 export(material_modal)
+export(material_navbar)
 export(material_number)
 export(material_page)
 export(material_password)
@@ -27,6 +29,7 @@ export(material_time)
 export(material_tooltip)
 export(update_material_checkbox)
 export(update_material_date)
+export(update_material_dropdown)
 export(update_material_email)
 export(update_material_number)
 export(update_material_password)
