Navbar and Sidenav OK!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(material_button)
 export(material_card)
 export(material_checkbox)
+export(material_collapsible)
 export(material_column)
 export(material_container)
 export(material_date)
@@ -20,6 +21,7 @@ export(material_radio)
 export(material_row)
 export(material_section)
 export(material_select)
+export(material_sidenav)
 export(material_slider)
 export(material_switch)
 export(material_tab_content)
@@ -28,6 +30,7 @@ export(material_text)
 export(material_time)
 export(material_tooltip)
 export(update_material_checkbox)
+export(update_material_collapsible)
 export(update_material_date)
 export(update_material_dropdown)
 export(update_material_email)
