--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(material_button)
 export(material_card)
 export(material_checkbox)
 export(material_collapsible)
+export(material_colormap)
 export(material_column)
 export(material_container)
 export(material_date)
