--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(material_dropdown)
 export(material_email)
 export(material_fab)
 export(material_file)
+export(material_icon)
 export(material_modal)
 export(material_navbar)
 export(material_number)
@@ -38,6 +39,7 @@ export(update_material_collapsible)
 export(update_material_date)
 export(update_material_dropdown)
 export(update_material_email)
+export(update_material_file)
 export(update_material_number)
 export(update_material_password)
 export(update_material_radio)
