--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0.9000
 Collate: 
+    'material-breadcrumb.R'
     'materialize-badge.R'
     'materialize-utils.R'
     'materialize-body.R'
