Small flexibility to collapse fixes on text add rating change pages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Collate:
     'materialize-navbar.R'
     'materialize-page.R'
     'materialize-radio.R'
+    'materialize-rating.R'
     'materialize-select.R'
     'materialize-sidenav.R'
     'materialize-slider.R'
