--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(material_number)
 export(material_page)
 export(material_password)
 export(material_radio)
+export(material_rating)
 export(material_row)
 export(material_section)
 export(material_select)
@@ -42,8 +43,10 @@ export(update_material_dropdown)
 export(update_material_email)
 export(update_material_file)
 export(update_material_number)
+export(update_material_page)
 export(update_material_password)
 export(update_material_radio)
+export(update_material_rating)
 export(update_material_select)
 export(update_material_slider)
 export(update_material_switch)
