--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(material_email)
 export(material_fab)
 export(material_file)
 export(material_icon)
+export(material_meter)
 export(material_modal)
 export(material_navbar)
 export(material_number)
@@ -42,6 +43,7 @@ export(update_material_date)
 export(update_material_dropdown)
 export(update_material_email)
 export(update_material_file)
+export(update_material_meter)
 export(update_material_number)
 export(update_material_page)
 export(update_material_password)
