--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(material_email)
 export(material_fab)
 export(material_file)
 export(material_icon)
+export(material_like)
 export(material_meter)
 export(material_modal)
 export(material_navbar)
@@ -37,12 +38,14 @@ export(material_text)
 export(material_time)
 export(material_tooltip)
 export(update_material_badge)
+export(update_material_card)
 export(update_material_checkbox)
 export(update_material_collapsible)
 export(update_material_date)
 export(update_material_dropdown)
 export(update_material_email)
 export(update_material_file)
+export(update_material_like)
 export(update_material_meter)
 export(update_material_number)
 export(update_material_page)
