better fab more flex on modal

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Allows shiny developers to incorporate UI elements based on Google'
 URL: 
 License: GPL-3 | file LICENSE
 Depends: R (>= 3.0.0)
-Imports: shiny, cuteFileBrowser
+Imports: shiny, cuteFileBrowser, jsonlite
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -46,6 +46,7 @@ Collate:
     'materialize-slider.R'
     'materialize-switch.R'
     'materialize-tabs.R'
+    'materialize-tags.R'
     'materialize-text.R'
     'materialize-tooltip.R'
 Remotes: TuSKan/cuteFileBrowser
