--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(material_icon)
 export(material_like)
 export(material_meter)
 export(material_modal)
+export(material_modal_close)
+export(material_modal_trigger)
 export(material_navbar)
 export(material_number)
 export(material_page)
@@ -34,6 +36,7 @@ export(material_slider)
 export(material_switch)
 export(material_tab_content)
 export(material_tabs)
+export(material_tags)
 export(material_text)
 export(material_time)
 export(material_tooltip)
@@ -56,4 +59,5 @@ export(update_material_select)
 export(update_material_slider)
 export(update_material_switch)
 export(update_material_tabs)
+export(update_material_tags)
 export(update_material_text)
