update_modal individualized rating

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(update_material_email)
 export(update_material_file)
 export(update_material_like)
 export(update_material_meter)
+export(update_material_modal)
 export(update_material_number)
 export(update_material_page)
 export(update_material_password)
