--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(material_email)
 export(material_fab)
 export(material_file)
 export(material_icon)
+export(material_img)
 export(material_like)
 export(material_meter)
 export(material_modal)
